# pbi-cli

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.pypi.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml  downloads-chart.yml  release.yml
docs/superpowers/plans/: 2026-04-01-tier1-visual-types-and-page-props.md
marketing/: generate_images.py
marketing/linkedin-posts/: 01-carousel-overview.md  02-why-pbi-cli.md  03-token-cost.md  04-how-it-works.md  05-chat-demo.md  06-bulk-operations.md  07-dax-skill.md  08-dax-debugging.md  09-model-health.md  10-modeling-skill.md  11-backup-restore.md  12-rls-testing.md  13-deploy-secure.md  14-docs-diagnostics.md  15-architecture.md  16-feature-scope.md  17-cta-start.md  18-promo-video.md  19-release-vibe-bi-comments.md  19-release-vibe-bi.md  20-auto-sync.md  README.md
scripts/: bake_headers.py  generate_downloads_chart.py
src/pbi_cli/: __init__.py  __main__.py  main.py  main_pbi_cli.py
src/pbi_cli/commands/: __init__.py  _helpers.py  advanced.py  bookmarks.py  calc_group.py  calendar.py  column.py  connection.py  database.py  dax.py  expression.py  filters.py  format_cmd.py  hierarchy.py  measure.py  model.py  partition.py  perspective.py  relationship.py  repl_cmd.py  report.py  security.py  setup_cmd.py  skills_cmd.py  table.py  trace.py  transaction.py  visual.py
src/pbi_cli/core/: __init__.py  adomd_backend.py  banner.py  binary_manager.py  bookmark_backend.py  bulk_backend.py  claude_integration.py  config.py  connection_store.py  dotnet_loader.py  errors.py  filter_backend.py  format_backend.py  mcp_client.py  output.py  pbir_models.py  pbir_path.py  pbir_validators.py  report_backend.py  session.py  tmdl_diff.py  tom_backend.py  visual_backend.py
src/pbi_cli/dlls/: README.md  __init__.py  pbi_cli.runtimeconfig.json
src/pbi_cli/preview/: __init__.py  renderer.py  server.py  watcher.py
src/pbi_cli/skills/: __init__.py
src/pbi_cli/skills/power-bi-dax/: SKILL.md
src/pbi_cli/skills/power-bi-deployment/: SKILL.md
src/pbi_cli/skills/power-bi-diagnostics/: SKILL.md
src/pbi_cli/skills/power-bi-docs/: SKILL.md
src/pbi_cli/skills/power-bi-filters/: SKILL.md
src/pbi_cli/skills/power-bi-modeling/: SKILL.md
src/pbi_cli/skills/power-bi-pages/: SKILL.md
src/pbi_cli/skills/power-bi-partitions/: SKILL.md
src/pbi_cli/skills/power-bi-report/: SKILL.md
src/pbi_cli/skills/power-bi-security/: SKILL.md
src/pbi_cli/skills/power-bi-visuals/: SKILL.md
src/pbi_cli/templates/: __init__.py
src/pbi_cli/templates/visuals/: __init__.py  actionButton.json  advancedSlicerVisual.json  areaChart.json  azureMap.json  barChart.json  card.json  cardNew.json  cardVisual.json  clusteredBarChart.json  clusteredColumnChart.json  columnChart.json  donutChart.json  funnelChart.json  gauge.json  image.json  kpi.json  lineChart.json  lineStackedColumnComboChart.json  listSlicer.json  multiRowCard.json  pageNavigator.json  pivotTable.json  ribbonChart.json  scatterChart.json  shape.json  slicer.json  stackedBarChart.json  tableEx.json  textSlicer.json  textbox.json  treemap.json  waterfallChart.json
src/pbi_cli/utils/: __init__.py  desktop_reload.py  desktop_sync.py  platform.py  repl.py
tests/: conftest.py  test_binary_manager.py  test_bookmark_backend.py  test_bulk_backend.py  test_claude_md.py  test_config.py  test_connection_store.py  test_e2e.py  test_errors.py  test_filter_backend.py  test_format_backend.py  test_hardening.py  test_helpers.py  test_mcp_client.py  test_output.py  test_pbir_path.py  test_pbir_validators.py  test_platform.py  test_preview.py  test_report_backend.py  test_skill_triggering.py  test_tmdl_diff.py  test_visual_backend.py  test_visual_calc.py
tests/test_commands/: test_connection.py  test_dax.py  test_measure.py  test_misc_commands.py  test_model.py  test_repl.py  test_setup.py  test_table.py
